--- a/past-events.html
+++ b/past-events.html
@@ -1,13 +1,13 @@
 ---
 layout: past-events
-title: Past events
-permalink: /pastevents/
+title: Events
+permalink: /events/
 ---
 <div class="container mtb">
     <div class="row">
         <! -- BLOG POSTS LIST -->
         <div class="col-lg-8">
-          {% for post in site.categories['blog'] %}
+          {% for post in site.categories['event'] %}
             <! -- Blog Post -->
             <a href="{{ post.url | prepend: site.baseurl }}">
               <img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}">
