--- a/events.html
+++ b/events.html
@@ -1,5 +1,5 @@
 ---
-layout: past-events
+layout: events
 title: Events
 permalink: /events/
 ---
@@ -10,7 +10,7 @@ permalink: /events/
           {% for post in site.categories['event'] %}
             <! -- Blog Post -->
             <a href="{{ post.url | prepend: site.baseurl }}">
-              <img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}">
+              <img class="img-responsive" src="{{ "/assets/img/events/" | prepend: site.baseurl }}{{ post.img }}">
             </a>
             <a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
             <p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | By: {{ post.author }}</csmall></p>
