Nicer presentation, adds text, closes #5

--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@ permalink: /about/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-12">
-            <h4>More About Our Agency.</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-            <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+            <h3>Our Goal</h3>
+            <p>Even though programming is becomming paramount in conteporary sceintific work, not everyone has been introduced to the concepts that it involves. We all can write scripts that work, but struggle with doing work that is clear for others. Sometimes we are oblivious to current technologies only because there is nobody around who would introduce us to them.</p>
+            <p>Aim of this community is to share knowhow of programming. To teach people who are in the position we once were. To teach good habbits so that we can all benefit from each others work. To share knowledge about current approaches and possibilities that arise with software such as Jupyter or new services such cloud computing.</p>
+            <p>We hold courses on programming topics, either online or in person in Prague.</p>
         </div>
     </div><! --/row -->
 </div><! --/container -->
